--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./lib/p5.dom.min.js"></script>
     <script src="./lib/p5.sound.min.js"></script>
     <script src="./lib/p5.play.js"></script>
-
+ 
     <link rel="stylesheet" href="style.css" />
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -23,12 +23,12 @@
 <script>
   // Your web app's Firebase configuration
   const firebaseConfig = {
-  apiKey: "AIzaSyAf5xvyNVEzhSS39aZVKZQ-AiwBmTTysAQ",
-  authDomain: "the-jungle-race-908a1.firebaseapp.com",
-  projectId: "the-jungle-race-908a1",
-  storageBucket: "the-jungle-race-908a1.appspot.com",
-  messagingSenderId: "806711413376",
-  appId: "1:806711413376:web:decc5228b450b95ae9b465"
+  apiKey: "AIzaSyCTvbO_ABy8O0VrF6adtPJMmPABiF38cAo",
+  authDomain: "race-jungle-d8a1a.firebaseapp.com",
+  projectId: "race-jungle-d8a1a",
+  storageBucket: "race-jungle-d8a1a.appspot.com",
+  messagingSenderId: "895110841348",
+  appId: "1:895110841348:web:fcce3cbb2a457de250e151"
 };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
